jitsi-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    k8s-app: jitsi
  name: jitsi
  #namespace: jitsi
spec:
  serviceName: "web"
  replicas: 1
  selector:
    matchLabels:
      k8s-app: jitsi
  template:
    metadata:
      labels:
        k8s-app: jitsi
    spec:
      containers:
        - name: jicofo
          image: jitsi/jicofo
          imagePullPolicy: Always
        - name: prosody
          image: jitsi/prosody
          imagePullPolicy: Always
        - name: web
          image: jitsi/web
          imagePullPolicy: Always
