jvb-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jvb
  #namespace: jitsi
spec:
  serviceName: "jvb" #Do not use '-' in name.
  replicas: 1
  selector:
    matchLabels:
      app: jvb
  template:
    metadata:
      labels:
        app: jvb
    spec:
      containers:
        - name: jvb
          image: lhr.ocir.io/YourTenancy/Repo/YourImage:latest   #I am using Oracle cloud registry 
          imagePullPolicy: Always
          #volumeMounts:
          #  - name: jvb
          #    mountPath: /home/jitsi-config/jvb/pv
          resources:
            requests:
              cpu: "0.5"
      imagePullSecrets:           # secret to pull your image
        - name: ocirsecret        # your private repo
