jvb-service.yaml
---
# service for jvbs
# create service for jvb upd access on kubernetes Nodeport starting with 30000.
# Make sure NodePorts between 30000-30005 are available on your kube cluster.
# update this if you need JVBs more than 6.
# JVB-0
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb-0
  name: jvb-0
  #namespace: jitsi
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
    - port: 31000
      name: jvb-0
      protocol: UDP
      targetPort: 31000
      nodePort: 31000
  selector:
    app: jvb
    "statefulset.kubernetes.io/pod-name": jvb-0
---
#JVB-1
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb-1
  name: jvb-1
  #namespace: jitsi
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
    - port: 31001
      name: jvb-1
      protocol: UDP
      targetPort: 31001
      nodePort: 31001
  selector:
    app: jvb
    "statefulset.kubernetes.io/pod-name": jvb-1
---
#JVB-2
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb-2
  name: jvb-2
  #namespace: jitsi
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
    - port: 31002
      name: jvb-2
      protocol: UDP
      targetPort: 31002
      nodePort: 31002
  selector:
    app: jvb
    "statefulset.kubernetes.io/pod-name": jvb-2
---
#JVB-3
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb-3
  name: jvb-3
  #namespace: jitsi
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
    - port: 31003
      name: jvb-3
      protocol: UDP
      targetPort: 31003
      nodePort: 31003
  selector:
    app: jvb
    "statefulset.kubernetes.io/pod-name": jvb-3
---
#JVB-4
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb-4
  name:  jvb-4
  #namespace: jitsi
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
    - port: 31004
      name:  jvb-4
      protocol: UDP
      targetPort: 31004
      nodePort: 31004
  selector:
    app: jvb
    "statefulset.kubernetes.io/pod-name":  jvb-4
---
#JVB-5
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb-5
  name:  jvb-5
  #namespace: jitsi
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
    - port: 31005
      name:  jvb-5
      protocol: UDP
      targetPort: 31005
      nodePort: 31005
  selector:
    app: jvb
    "statefulset.kubernetes.io/pod-name":  jvb-5
