web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: web
  name: web
  #namespace: jitsi
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  - name: "https"
    port: 443
    targetPort: 443
  - name: "xmpp"            # jvb will access to XMPP server via 5222
    port: 5222
    targetPort: 5222
  selector:
    k8s-app: jitsi
---
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: jitsi
   #namespace: jitsi
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
  rules:
  - host: jitsi.meeting.random
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: http
