tls-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jitsi-tls
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - jitsi.XXX.XXX
    secretName: cloudflare-tls
  rules:
  - host: jitsi.XXX.XXX
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: http


#Create secret with crt and private key: cloudflare-tls
#kubectl create secret tls cloudflare-tls --key origin-ca.pk --cert origin-ca.crt
